gcc/testsuite/gm2/iso/fail/badparam.def
DEFINITION MODULE badparam ;

PROCEDURE foo (c: CHAR) ;

END badparam.